// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInput rendering renders expected elements 1`] = `
<div
  className="ListInput"
>
  <div
    aria-live="assertive"
    className="sr-only"
  />
  <LabelLine
    error={false}
    htmlFor="test"
    id="test-label"
    required={true}
    text="Test"
  />
  <ComboBox
    aria-describedby="test-helper"
    aria-required={true}
    autoSelect={true}
    error={false}
    getSuggestions={[Function]}
    id="test"
    onChange={[Function]}
    onEnter={[Function]}
    onTextChange={[Function]}
    placeholder="test placeholder"
    text=""
  />
  <FieldHelper
    id="test-helper"
    text="Helper text"
  />
  <ListEntries
    className="ListInput__list"
    highlightKey={null}
    id="test-grid"
    list={
      [
        {
          "id": "0",
          "name": "test",
        },
      ]
    }
    onHighlightClear={[Function]}
    onRemoveClick={[Function]}
  />
</div>
`;

exports[`ListInput rendering renders expected elements when column is set 1`] = `
<div
  className="ListInput"
>
  <div
    aria-live="assertive"
    className="sr-only"
  />
  <LabelLine
    error={false}
    htmlFor="test"
    id="test-label"
    text="Test"
  />
  <ComboBox
    aria-describedby="test-helper"
    autoSelect={true}
    error={false}
    getSuggestions={[Function]}
    id="test"
    onChange={[Function]}
    onEnter={[Function]}
    onTextChange={[Function]}
    placeholder="test placeholder"
    text=""
  />
  <FieldHelper
    id="test-helper"
  />
  <ListEntries
    className="ListInput__list"
    column={true}
    highlightKey={null}
    id="test-grid"
    list={
      [
        {
          "id": "0",
          "name": "test",
        },
      ]
    }
    onHighlightClear={[Function]}
    onRemoveClick={[Function]}
  />
</div>
`;

exports[`ListInput rendering renders expected elements when error is set 1`] = `
<div
  className="ListInput"
>
  <div
    aria-live="assertive"
    className="sr-only"
  />
  <LabelLine
    error={true}
    htmlFor="test"
    id="test-label"
    text="Test"
  />
  <ComboBox
    aria-describedby="test-error"
    autoSelect={true}
    error={true}
    getSuggestions={[Function]}
    id="test"
    onChange={[Function]}
    onEnter={[Function]}
    onTextChange={[Function]}
    placeholder="test placeholder"
    text=""
  />
  <FieldError
    id="test-error"
    text="Error"
  />
  <ListEntries
    className="ListInput__list"
    highlightKey={null}
    id="test-grid"
    list={
      [
        {
          "id": "0",
          "name": "test",
        },
      ]
    }
    onHighlightClear={[Function]}
    onRemoveClick={[Function]}
  />
</div>
`;

exports[`ListInput rendering renders expected elements when the list is empty 1`] = `
<div
  className="ListInput"
>
  <div
    aria-live="assertive"
    className="sr-only"
  />
  <LabelLine
    error={false}
    htmlFor="test"
    id="test-label"
    text="Test"
  />
  <ComboBox
    aria-describedby="test-helper"
    autoSelect={true}
    error={false}
    getSuggestions={[Function]}
    id="test"
    onChange={[Function]}
    onEnter={[Function]}
    onTextChange={[Function]}
    placeholder="test placeholder"
    text=""
  />
  <FieldHelper
    id="test-helper"
  />
  <div
    aria-live="polite"
    className="ListInput__empty"
    id="test-empty"
  >
    Test empty
  </div>
</div>
`;
